# mangaverse-sources

./: Cargo.toml
src/: lib.rs
src/db/: chapter.rs  genre.rs  manga.rs  mod.rs  source.rs
src/mangadino/: entity.rs
src/manganelo/: entity.rs
src/readm/: entity.rs  mod.rs
src/studygroup/: entity.rs
