[package]
name = "mangaverse-sources"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.13.0"
reqwest = "0.11.12"
mangaverse-entity = {git = "https://github.com/fa993/mangaverse-entity", rev = "9c6c867"}
uuid = {version = "1.1.2", features = ["v4"]}
lazy_static = "1.4.0"
itertools = "0.10.5"

[dependencies.sqlx]
version = "0.5.13"
features = ["mysql", "chrono", "macros", "runtime-tokio-rustls"]