[package]
name = "mangaverse-sources"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.13.0"
reqwest = "0.11.12"
mangaverse-entity = {git = "https://github.com/fa993/mangaverse-entity", rev = "817487c"}
uuid = {version = "1.1.2", features = ["v4"]}
lazy_static = "1.4.0"
itertools = "0.10.5"
Inflector = "0.11.4"

[dependencies.sqlx]
version = "0.5.13"
features = ["mysql", "chrono", "macros"]